--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,53 @@
-*.dmb
-*.rsc
-*.int
-*.lk
-*.zip
+# Rust/Cargo compilation output
+target/
+Cargo.lock
+**/*.rs.bk
+
+# Node/npm
+frontend/node_modules/
+frontend/dist/
+frontend/package-lock.json
+frontend/yarn.lock
+frontend/.env.local
+frontend/vite-start.log
+frontend/vite.pid
+
+# Large binaries (GitHub limit: 100MB, recommended: 50MB)
+*.rlib
+*.a
+*.so
+*.dylib
+*.dll
+*.exe
+*.wasm
+
+# Build artifacts
+debug/
+release/
+build/
+dist/
+
+# IDE/Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Cache
+.tsimp
+.parcel-cache
+__pycache__/
+*.pyc
