--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -6,3 +6,10 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
+
+[[redirects]]
+  # SPA fallback: redirect all non-file routes to index.html so client-side routing works
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = true
