--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,9 @@
 PORT=3001
 JWT_SECRET=your-secret-key-change-in-production
 NODE_ENV=development
+VITE_API_URL=/api
+
+# For Vercel deployment:
+# 1. Go to Vercel Dashboard → Project Settings → Environment Variables
+# 2. Add JWT_SECRET with your secret value
+# This will automatically be available to your API functions
