Use env-based Horizon/Soroban endpoints for Freighter transactions; document env vars

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -7,3 +7,8 @@ VITE_API_URL=/api
 # 1. Go to Vercel Dashboard → Project Settings → Environment Variables
 # 2. Add JWT_SECRET with your secret value
 # This will automatically be available to your API functions
+
+# Optional: Override Horizon / Soroban endpoints (useful for testnet or custom RPC)
+# If you set these in Vercel, the frontend will use them. Defaults point to Stellar Testnet.
+VITE_HORIZON_URL=https://horizon-testnet.stellar.org
+VITE_SOROBAN_RPC=https://soroban-testnet.stellar.org
